--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-        <h1 id="main_title">The travel blog</h1>
+        <h1 id="main_title">Photos of Liverpool</h1>
                 <ul id="menu_whole">
                     <li class="menu_item"><a href="#">Home</a></li>
                     <li class="menu_item"><a href="#">About</a></li>
