--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
     <head>
     <link rel="stylesheet" type="text/css" href="./my_website.css">
+    <link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Poiret One">
+          <link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Shadows Into Light Two">
     <title>My Website</title>
     </head>
     <body>
@@ -15,6 +19,18 @@
                     <li class="menu_item"><a href="#"> Contact</a></li>
                 </ul>
 
-        <h2>Latest Photos</h2>
     </body>
+    <table style="width:100%">
+    <tr>
+    <td><img src="Road.png" alt="roadlightst" width="400" height="400"></td>
+    <td><img src="waterfront.jpg" alt="Waterfront" width="400" height="400"></td> 
+    <td><img src="beachman.png" alt="BeachMan" width="350" height="400"></td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td> 
+    <td>94</td>
+  </tr>
+</table>
+
 </html>
