--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Poiret One">
           <link rel="stylesheet" type="text/css"
-          href="https://fonts.googleapis.com/css?family=Shadows Into Light Two">
+          href="https://fonts.googleapis.com/css?family=Waiting for the Sunrise">
     <title>My Website</title>
     </head>
     <body>
@@ -27,9 +27,9 @@
     <td><img src="beachman.png" alt="BeachMan" width="350" height="400"></td>
   </tr>
   <tr>
-    <td>Eve</td>
-    <td>Jackson</td> 
-    <td>94</td>
+    <td><img src="woods.png" alt="woods" width="400" height="400"></td>
+    <td><img src="bike.png" alt="bike" width="400" height="400"></td> 
+    <td><img src="bridgebit.png" alt="bridgebit" width="350" height="400"></td> </td>
   </tr>
 </table>
 
