--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </tr>
   <tr>
     <td><img src="woods.png" alt="woods" width="400" height="400"></td>
-    <td><img src="bike.png" alt="bike" width="400" height="400"></td> 
+    <td><img src="Bike.png" alt="bike" width="400" height="400"></td> 
     <td><img src="bridgebit.png" alt="bridgebit" width="350" height="400"></td> </td>
   </tr>
 </table>
