--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
+    <link href="./normalize.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./my_website.css">
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Poiret One">
-          <link rel="stylesheet" type="text/css"
+    <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Waiting for the Sunrise">
-    <title>My Website</title>
+    <link rel="stylesheet" type="text/css" href="./bootstrap-files/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="./bootstrap-files/css/bootstrap-theme.css">
+    <title>Liverpool Photo Blog</title>      
     </head>
     <body>
-        <header>
-       <h1 id="main_title">Photos of Liverpool</h1>
-        </header>
-                <ul id="menu_whole">
+    <img id="van_header" src="van5.jpeg">   
+    <h1 id="main_title">Photos of Liverpool</h1>  
+           <ul id="menu_whole">
                     <li class="menu_item"><a href="#">Home</a></li>
                     <li class="menu_item"><a href="#">About</a></li>
                     <li class="menu_item"><a href="#"> Portfolio</a></li>
                     <li class="menu_item"><a href="#"> Contact</a></li>
-                </ul>
-
-    </body>
-    <table style="width:100%">
+            </ul>
+      <table style="width:100%">
     <tr>
     <td><img src="Road.png" alt="roadlightst" width="400" height="400"></td>
     <td><img src="waterfront.jpg" alt="Waterfront" width="400" height="400"></td> 
@@ -31,6 +31,8 @@
     <td><img src="Bike.png" alt="bike" width="400" height="400"></td> 
     <td><img src="bridgebit.png" alt="bridgebit" width="350" height="400"></td> </td>
   </tr>
-</table>
+      </table>
+    </body>
+    
 
 </html>
