--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <title>Liverpool Photo Blog</title>      
     </head>
     <body>
-    <img id="van_header" src="van5.jpeg">   
-    <h1 id="main_title">Photos of Liverpool</h1>  
+    <header class="header-site">   
+    <h1 id="main_title">Liverpool Vision </h1>
+    <h2 id="sub_heading">Photos by people from around the word</h2> 
+    </header>
            <ul id="menu_whole">
                     <li class="menu_item"><a href="#">Home</a></li>
                     <li class="menu_item"><a href="#">About</a></li>
