--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+  <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./normalize.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./my_website.css">
@@ -11,32 +11,37 @@
     <link rel="stylesheet" type="text/css" href="./bootstrap-files/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="./bootstrap-files/css/bootstrap-theme.css">
     <title>Liverpool Photo Blog</title>      
-    </head>
-    <body>
-    <div class="header-site">   
-    <img src="van5.jpeg" height="260" width="100%">
-    <h1 id="main_title">Liverpool Vision </h1>
-    <h2 id="sub_heading">Photographers from around the word</h2> 
-    </div>
+  </head>
+  <body>
+    <div class="whole-header">
+      <div class="inner-headblock"
+        <h1 id="main_title">
+          Liverpool Vision 
+        </h1>
+        <h2 id="sub_heading">
+          Photographers from around the word
+        </h2> 
+      </div>
+    </div>  
            <ul id="menu_whole">
                     <li class="menu_item"><a href="#">Home</a></li>
                     <li class="menu_item"><a href="#">About</a></li>
                     <li class="menu_item"><a href="#"> Portfolio</a></li>
                     <li class="menu_item"><a href="#"> Contact</a></li>
             </ul>
-      <table style="width:100%">
-    <tr>
-    <td><img src="Brian_wheel.jpeg" alt="Wheel" width="400" height="400"></td>
-    <td><img src="woods.png" alt="woods" width="400" height="400"></td>
-    <td><img src="Brian allerton.jpeg" alt="Allerton Road" width="400" height="400"></td>
-  </tr>
-  <tr>
-    <td><img src="waterfront.jpg" alt="water" width="400" height="400"></td>
-    <td><img src="Bike.png" alt="bike" width="400" height="400"></td> 
-    <td><img src="bridgebit.png" alt="bridgebit" width="350" height="400"></td> </td>
-  </tr>
-      </table>
-    </body>
+    <table style="width:100%">
+      <tr>
+        <td><img src="Brian_wheel.jpeg" alt="Wheel" width="400" height="400"></td>
+        <td><img src="woods.png" alt="woods" width="400" height="400"></td>
+        <td><img src="Brian allerton.jpeg" alt="Allerton Road" width="400" height="400"></td>
+      </tr>
+      <tr>
+        <td><img src="waterfront.jpg" alt="water" width="400" height="400"></td>
+        <td><img src="Bike.png" alt="bike" width="400" height="400"></td> 
+        <td><img src="bridgebit.png" alt="bridgebit" width="350" height="400"></td> </td>
+        </tr>
+    </table>
+  </body>
     
 
 </html>
