take away fluid test

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li class="menu_item"><a href="#"> Portfolio</a></li>
                     <li class="menu_item"><a href="#"> Contact</a></li>
             </ul>
-    <div class="container.fluid">
+    <div class="container">
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-4">
            <a href="Squirrel.jpeg" target="blank" class="thumbnail">
