no padding stylesheet order changed!!!

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <link href="./normalize.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="./bootstrap-files/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="./bootstrap-files/css/bootstrap-theme.css">
     <link rel="stylesheet" type="text/css" href="./my_website.css">
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Poiret One">
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Waiting for the Sunrise">
-    <link rel="stylesheet" type="text/css" href="./bootstrap-files/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="./bootstrap-files/css/bootstrap-theme.css">
     <title>Liverpool Photo Blog</title>      
   </head>
   <body>
@@ -55,10 +55,17 @@
            <img src="Me1.png" alt="Woman by Docks">
            </a>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-4">.col-md-4</div>
-        <div class="col-xs-12 col-sm-6 col-md-4">.col-md-4</div>
+          <div class="col-xs-12 col-sm-6 col-md-4">
+            <a href="swans.jpeg" target="blank" class="thumbnail">
+              <img src="swans.jpeg" alt="Swans">
+            </a>
+           </div> 
+        <div class="col-xs-12 col-sm-6 col-md-4">
+            <a href="brian allerton.jpeg" target="blank" class="thumbnail">
+              <img src="brian allerton.jpeg" alt="Allerton Road">
+            </a>
+           </div> 
       </div>
-      
       
     </div>
 
