--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             </a>
            </div> 
         <div class="col-xs-12 col-sm-6 col-md-4">
-            <a href="Brian_allerton.jpeg.jpeg" target="blank" class="thumbnail">
-              <img src="Brian_allerton.jpeg.jpeg" alt="Allerton Road">
+            <a href="Brian_allerton.jpeg" target="blank" class="thumbnail">
+              <img src="Brian_allerton.jpeg" alt="Allerton Road">
             </a>
            </div> 
       </div>
