--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             </a>
            </div> 
         <div class="col-xs-12 col-sm-6 col-md-4">
-            <a href="swans.jpeg" target="blank" class="thumbnail">
-              <img src="swans.jpeg" alt="Allerton Road">
+            <a href="Allerton2jpeg" target="blank" class="thumbnail">
+              <img src="Allerton2.jpeg" alt="Allerton Road">
             </a>
            </div> 
       </div>
