--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </a>
            </div> 
         <div class="col-xs-12 col-sm-6 col-md-4">
-            <a href="Allerton2jpeg" target="blank" class="thumbnail">
+            <a href="Allerton2.jpeg" target="blank" class="thumbnail">
               <img src="Allerton2.jpeg" alt="Allerton Road">
             </a>
            </div> 
