up to date 3 4 rows repsonsive link to home

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="whole-header">
       <div class="inner-headblock"
         <h1 id="main_title">
-          Liverpool Vision 
+         <a id=title_link href="index.html">Liverpool Vision</a> 
         </h1>
         <h2 id="sub_heading">
           Photographers from around the word
@@ -67,6 +67,24 @@
            </div> 
       </div>
       
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-4">
+           <a href="Me1.png" target="blank" class="thumbnail">
+           <img src="Me1.png" alt="Woman by Docks">
+           </a>
+        </div>
+          <div class="col-xs-12 col-sm-6 col-md-4">
+            <a href="swans.jpeg" target="blank" class="thumbnail">
+              <img src="swans.jpeg" alt="Swans">
+            </a>
+           </div> 
+        <div class="col-xs-12 col-sm-6 col-md-4">
+            <a href="Allerton2.jpeg" target="blank" class="thumbnail">
+              <img src="Allerton2.jpeg" alt="Allerton Road">
+            </a>
+           </div> 
+           
+      </div>
     </div>
 
   </body>
