--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
                     <li class="menu_item"><a href="#">Home</a></li>
                     <li class="menu_item"><a href="#">About</a></li>
                     <li class="menu_item"><a href="#"> Portfolio</a></li>
-                    <li class="menu_item"><a href="#"> Contact</a></li>
+                    <li class="menu_item"><a href="contactpage.html"> Contact</a></li>
             </ul>
     <div class="container.fluid">
 
       <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-4">   
-          <a href="Brian_wheel.jpeg" target="blank" class="thumbnail">
+        <div class="col-xs-12 col-sm-6 col-md-4"> 
+          <h3 class="text_photo"> Albert Docks</h3>
+           <h3 class="subtext_photo"> by Brian Mahe</h3>
+          <a href="https://www.facebook.com/Mahe.Brian" target="blank" class="thumbnail">
             <img src="Brian_wheel.jpeg" alt="Wheel at Docks">
           </a>
         </div>
