stop coding its time

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-4">
-          <a href="woodsreal.jpeg" target="blank" class="thumbnail">
+         <h3 class="text_photo"> Formby Red Squirrel Walk</h3>
+           <h3 class="subtext_photo"> by Eddie Delaveau</h3>
+             <a href="https://instagram.com/ed_delaveau" target="blank" class="thumbnail">
             <img src="woodsreal.jpeg" alt="Woods">
            </a>
         </div>
