--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="menu_item"><a href="#">Home</a></li>
                     <li class="menu_item"><a href="#">About</a></li>
                     <li class="menu_item"><a href="#"> Portfolio</a></li>
-                    <li class="menu_item"><a href="contactpage.html"> Contact</a></li>
+                    <li class="menu_item"><a href="contactpage.php"> Contact</a></li>
             </ul>
     <div class="container.fluid">
 
