--- a/contactpage.html
+++ b/contactpage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./bootstrap-files/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="./bootstrap-files/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="./my_website.css">
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Poiret One">
@@ -25,15 +26,14 @@
     </div>  
            <ul id="menu_whole">
                     <li class="menu_item"><a href="index.html">Home</a></li>
-                    <li class="menu_item"><a href="#">About</a></li>
-                    <li class="menu_item"><a href="#"> Portfolio</a></li>
+                    <li class="menu_item"><a href="about.html">About</a></li>
                     <li class="menu_item"><a href="contactpage.html"> Contact</a></li>
             </ul>
 
   <body>
     <div id="form-main">
       <div id="form-div">
-        <form action="mail.php" class="form" id="form1" method="post">
+        <form class="form" id="form1" method="post">
           <p class="name">
             <input name="name" type="text" class="validate[required,custom[onlyLetter],length[0,100]] feedback-input" placeholder="Name" id="name" />
           </p>
