Finished site probably

--- a/about.html
+++ b/about.html
@@ -33,35 +33,28 @@
         <div class="central_grey">
             <h1 id="about_us"> About Us </h1>
               <div class ="central_text"> 
-            <p class="paragraph_indiv"><strong>Liverpool Vision </strong> was created in 2016 as a way of showng modern day Liverpool through the eyes of people from around the world.
-            </p>
-            <p class="paragraph_indiv"><strong>Each one of</strong> the photographers featured on this blog originates from another city and is passionate about Liverpool's beauty.</p>
-            <p class="paragraph_indiv"><strong>If you would</strong> like to contribute to Liverpool Vision, please use the contact form provided and include links to any portfolios</p>
-            <p class="paragraph_indiv"><strong>Find out more</strong> about our featured photographers by clicking on the buttons below:</p>
+                <p class="paragraph_indiv"><strong>Liverpool Vision </strong> was created in 2016 as a way of showng modern day Liverpool through the eyes of people from around the world.</p>
+                <p class="paragraph_indiv"><strong>Each one of</strong> the photographers featured on this blog originates from another city and is passionate about Liverpool's beauty.</p>
+                <p class="paragraph_indiv"><strong>If you would</strong> like to submit your photos to Liverpool Vision, please use the contact form provided and include links to any portfolios.</p>
+                <p class="paragraph_indiv"><strong>Find out more</strong> about our featured photographers by clicking on the buttons below:</p>
 
-            <p class="paragraph_indiv_social">
-              <a href="https://www.instagram.com/ed_delaveau/" target="blanc">
-              <i class="fa fa-camera-retro fa-2x"></i></a>
-                Olivia Barnes-Brett & Eddie Delaveau
-            </p>
-            <p class="paragraph_indiv_social">
-              <a href="https://www.facebook.com/Mahe.Brian" target="blanc">
-              <i class="fa fa-facebook-official fa-2x"></i></a>
-                Brian Mahe
-            </p>
-            <p class="paragraph_indiv_social">
-              <a href="https://www.flickr.com/photos/126137277@N04/" target="blanc">
-              <i class="fa fa-flickr fa-2x"></i></a>
-                Alexandre Rousseau
-            </p>
-
-
-
-
-
-          </div>
+                <p class="paragraph_indiv_social">
+                  <a href="https://www.instagram.com/ed_delaveau/" target="blanc">
+                  <i class="fa fa-camera-retro fa-2x"></i></a>
+                  Olivia Barnes-Brett & Eddie Delaveau
+                </p>
+                <p class="paragraph_indiv_social">
+                  <a href="https://www.facebook.com/Mahe.Brian" target="blanc">
+                  <i class="fa fa-facebook-official fa-2x"></i></a>
+                  Brian Mahe
+                </p>
+                <p class="paragraph_indiv_social">
+                  <a href="https://www.flickr.com/photos/126137277@N04/" target="blanc">
+                  <i class="fa fa-flickr fa-2x"></i></a>
+                  Alexandre Rousseau
+                </p>
+              </div>
         </div>
       </div>
   </body>
-
 </html>
