--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6">
-           <h3 class="text_photo"> White Sand at Formby Beach</h3>
+           <h3 class="text_photo"> White Sand at Formby</h3>
            <h3 class="subtext_photo"> by Eddie Delaveau</h3>
              <a href="https://instagram.com/ed_delaveau" target="blank" class="thumbnail">
            <img src="Beach distance man.jpg" alt="Far away Man">
