--- a/contactpage.html
+++ b/contactpage.html
@@ -33,7 +33,7 @@
   <body>
     <div id="form-main">
       <div id="form-div">
-        <form class="form" id="form1" method="post">
+        <form class="form" action="MAILTO:hsobarne@liv.ac.uk" id="form1" method="post">
           <p class="name">
             <input name="name" type="text" class="validate[required,custom[onlyLetter],length[0,100]] feedback-input" placeholder="Name" id="name" />
           </p>
