--- a/contactpage.html
+++ b/contactpage.html
@@ -47,8 +47,10 @@
            <textarea name="text" class="validate[required,length[6,300]] feedback-input" id="comment" placeholder="Comment"></textarea>
           </p>
 
-          <div class="g-recaptcha" data-sitekey="6LcOYh4TAAAAAEnkXmdc-xdtg_ETC80knyDXbQg7"></div>
-          <br>
+          <div class ="recaptcha_responsive">
+           <div class="g-recaptcha" data-sitekey="6LcOYh4TAAAAAEnkXmdc-xdtg_ETC80knyDXbQg7" data-size="compact"> 
+           </div>
+          </div>
           <div class="submit">
             <input type="submit" value="SEND" id="button-blue"/>
               <div class="ease"></div>
