--- a/contactpage.html
+++ b/contactpage.html
@@ -47,10 +47,9 @@
            <textarea name="text" class="validate[required,length[6,300]] feedback-input" id="comment" placeholder="Comment"></textarea>
           </p>
 
-          <div class ="recaptcha_responsive">
-           <div class="g-recaptcha" data-sitekey="6LcOYh4TAAAAAEnkXmdc-xdtg_ETC80knyDXbQg7" data-size="compact"> 
-           </div>
+          <div class="g-recaptcha" data-sitekey="6LcOYh4TAAAAAEnkXmdc-xdtg_ETC80knyDXbQg7"style="transform:scale(0.7);-webkit-transform:scale(0.7);transform-origin:0 0;-webkit-transform-origin:0 0;">
           </div>
+          <br>
           <div class="submit">
             <input type="submit" value="SEND" id="button-blue"/>
               <div class="ease"></div>
