--- a/index.html
+++ b/index.html
@@ -198,9 +198,18 @@
               </a>
         </div>
       </div>
-      
     </div>
+      <footer id="footer_main">
+        <div class="row">
+          <div class="col-xs-6 col-sm-6 col-md-6">
+            <a id="footertitle_link" href="index.html"><h1 id= "footer_title">Liverpool Vision&copy</h1>
+          </div>
+          <div class="col-xs-6 col-sm-6 col-md-6">
+            <p id="footer_text">Web Design by Olivia Barnes-Brett</p>
+            <p id="footer_text"><a href="contactpage.html"> Contact Us</a></p>
+          </div>
+        </div>
 
-  </body>
-
+      </footer>
 </html>
+  </body>
